# pydantic-secrets

./: .env  .gitignore  LICENSE  README.md  lets.yaml  pyproject.toml
.github/workflows/: publish.yaml  pull_request.yaml  release.yaml  tests.yaml  validate_code.yaml
pydantic_secrets/: __init__.py  abstract.py  exceptions.py  main.py  protocols.py  warnings.py
pydantic_secrets/secret_manager/: __init__.py  gcp.py
snippets/: custom_secret_manager_implementation.py  example.py  google_secret_manager.py
tests/integration_tests/: test_custom_secret_manager.py  test_gcp_secret_manager.py
tests/unit_tests/: test_version.py
