[tool.poetry]
name = "pydantic-secrets"
version = "0.1.1"
description = "The library is designed for extending your BaseSettings config class to load secrets from a secret manager"
authors = ["Dmitry Marchuk <marchuk.d13@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydantic_secrets"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.277"
pyright = "^1.1.316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
src = ["./"]
extend-select = [
    "I",
    "F",
    "N",
    "UP",
]

[tool.black]
line-length = 120
