[project]
authors = [
    {name = "Dmitry Marchuk", email = "marchuk.d13@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "pydantic-settings<3.0.0,>=2.12.0",
    "google-cloud-secret-manager<3.0.0,>=2.25.0",
]
name = "pydantic-secrets"
version = "0.2.1"
description = "The library is designed for extending your BaseSettings config class to load secrets from a secret manager"
readme = "README.md"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.3.0",
    "ruff<1.0.0,>=0.0.277",
    "pyright>=1.1.407,<2.0.0",
    "pytest<9.0.0,>=8.0.0",
    "coverage<8.0.0,>=7.4.1",
    "pytest-mock>=3.15.1",
]

[tool.pdm.build]
includes = ["pydantic_secrets"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff]
line-length = 120
src = ["./"]
lint.extend-select = [
    "I",
    "F",
    "N",
    "UP",
]

[tool.black]
line-length = 120

[tool.pyright]
ignore = [
    "tests/*",
    "snippets/*",
    "pydantic_secrets/protocols.py",
]
